--- a/index.html
+++ b/index.html
@@ -94,5 +94,88 @@
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
-    <body></body>
+    <body>
+        <header class="header">
+            <div class="container">
+                <!-- Header Top -->
+                <div class="header-top">
+                    <!-- Logo -->
+                    <div class="logo">
+                        <span class="logo__circle"></span>
+                        <span class="logo__brand">
+                            <div class="logo__text">shine</div>
+                            <div class="logo__text">smile</div>
+                        </span>
+                    </div>
+
+                    <!-- Navbar -->
+                    <nav class="navbar">
+                        <ul class="navbar__list">
+                            <li class="navbar__item">
+                                <a
+                                    href="#!"
+                                    class="navbar__link navbar__link--active"
+                                    >Home</a
+                                >
+                            </li>
+
+                            <li class="navbar__item">
+                                <a href="#!" class="navbar__link">Services</a>
+                            </li>
+
+                            <li class="navbar__item">
+                                <a href="#!" class="navbar__link">About</a>
+                            </li>
+
+                            <li class="navbar__item">
+                                <a href="#!" class="navbar__link">Doctors</a>
+                            </li>
+                        </ul>
+                    </nav>
+
+                    <!-- Action -->
+                    <div class="header-action">
+                        <a href="#!" class="header-action__login">Sign in</a>
+                        <a href="#!" class="btn header-action__sign-up">Sign up</a>
+                    </div>
+                </div>
+
+                <!-- Hero -->
+                <div class="hero">
+                    <!-- Hero content -->
+                    <section class="hero__content">
+                        <h1 class="hero__heading">
+                            Exceptional dental care for all ages.
+                        </h1>
+                        <p class="hero__desc">
+                            Exceptional dental care for all ages. Your great
+                            smile begins with a great dentist.
+                        </p>
+                        <div class="hero__row">
+                            <a href="#!" class="btn">Book Online</a>
+                            <span class="hero__phone"
+                                >or call (123) 456-7890</span
+                            >
+                        </div>
+                    </section>
+
+                    <!-- Hero media -->
+                    <section class="hero__media">
+                        <figure class="hero__images">
+                            <img
+                                src="./assets/img/hero-01.jpg"
+                                alt="Exceptional dental care for all ages."
+                                class="hero__img"
+                            />
+                            <img
+                                src="./assets/img/hero-02.jpg"
+                                alt="Exceptional dental care for all ages."
+                                class="hero__img"
+                            />
+                        </figure>
+                    </section>
+                </div>
+            </div>
+        </header>
+    </body>
 </html>
