--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                     </p>
                     <div class="work__list">
                         <!-- Item 1 -->
-                        <div class="work__item">
+                        <section class="work__item">
                             <img
                                 src="./assets/icons/search.svg"
                                 alt="Search"
@@ -311,10 +311,10 @@
                                 experience-contact for inquiry.
                             </p>
                             <a href="#!" class="work-item__link">Learn More</a>
-                        </div>
+                        </section>
 
                         <!-- Item 2 -->
-                        <div class="work__item">
+                        <section class="work__item">
                             <img
                                 src="./assets/icons/search-user.svg"
                                 alt="Search User"
@@ -326,10 +326,10 @@
                                 experience-contact for inquiry.
                             </p>
                             <a href="#!" class="work-item__link">Learn More</a>
-                        </div>
+                        </section>
 
                         <!-- Item 1 -->
-                        <div class="work__item">
+                        <section class="work__item">
                             <img
                                 src="./assets/icons/bag.svg"
                                 alt="bag"
@@ -341,7 +341,7 @@
                                 experience-contact for inquiry.
                             </p>
                             <a href="#!" class="work-item__link">Learn More</a>
-                        </div>
+                        </section>
                     </div>
                 </div>
             </div>
