--- a/index.html
+++ b/index.html
@@ -5,81 +5,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Shine Smile</title>
         <!-- Favicon -->
-        <link
-            rel="apple-touch-icon"
-            sizes="57x57"
-            href="./assets/favicon/apple-icon-57x57.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="60x60"
-            href="./assets/favicon/apple-icon-60x60.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="72x72"
-            href="./assets/favicon/apple-icon-72x72.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="76x76"
-            href="./assets/favicon/apple-icon-76x76.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="114x114"
-            href="./assets/favicon/apple-icon-114x114.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="120x120"
-            href="./assets/favicon/apple-icon-120x120.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="144x144"
-            href="./assets/favicon/apple-icon-144x144.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="152x152"
-            href="./assets/favicon/apple-icon-152x152.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="180x180"
-            href="./assets/favicon/apple-icon-180x180.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="192x192"
-            href="./assets/favicon/android-icon-192x192.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="32x32"
-            href="./assets/favicon/favicon-32x32.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="96x96"
-            href="./assets/favicon/favicon-96x96.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="16x16"
-            href="./assets/favicon/favicon-16x16.png"
-        />
+        <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon/apple-icon-57x57.png" />
+        <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicon/apple-icon-60x60.png" />
+        <link rel="apple-touch-icon" sizes="72x72" href="./assets/favicon/apple-icon-72x72.png" />
+        <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-icon-76x76.png" />
+        <link rel="apple-touch-icon" sizes="114x114" href="./assets/favicon/apple-icon-114x114.png" />
+        <link rel="apple-touch-icon" sizes="120x120" href="./assets/favicon/apple-icon-120x120.png" />
+        <link rel="apple-touch-icon" sizes="144x144" href="./assets/favicon/apple-icon-144x144.png" />
+        <link rel="apple-touch-icon" sizes="152x152" href="./assets/favicon/apple-icon-152x152.png" />
+        <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-icon-180x180.png" />
+        <link rel="icon" type="image/png" sizes="192x192" href="./assets/favicon/android-icon-192x192.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="96x96" href="./assets/favicon/favicon-96x96.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png" />
         <link rel="manifest" href="./assets/favicon/manifest.json" />
         <meta name="msapplication-TileColor" content="#ffffff" />
-        <meta
-            name="msapplication-TileImage"
-            content="./assets/favicon/ms-icon-144x144.png"
-        />
+        <meta name="msapplication-TileImage" content="./assets/favicon/ms-icon-144x144.png" />
         <meta name="theme-color" content="#ffffff" />
 
         <!-- Embed fonts -->
@@ -113,11 +54,7 @@
                     <nav class="navbar">
                         <ul class="navbar__list">
                             <li class="navbar__item">
-                                <a
-                                    href="#!"
-                                    class="navbar__link navbar__link--active"
-                                    >Home</a
-                                >
+                                <a href="#!" class="navbar__link navbar__link--active">Home</a>
                             </li>
 
                             <li class="navbar__item">
@@ -137,9 +74,7 @@
                     <!-- Action -->
                     <div class="header-action">
                         <a href="#!" class="header-action__login">Sign in</a>
-                        <a href="#!" class="btn header-action__sign-up"
-                            >Sign up</a
-                        >
+                        <a href="#!" class="btn header-action__sign-up">Sign up</a>
                     </div>
                 </div>
 
@@ -147,18 +82,14 @@
                 <div class="hero">
                     <!-- Hero content -->
                     <section class="hero__content">
-                        <h1 class="hero__heading">
-                            Exceptional dental care for all ages.
-                        </h1>
+                        <h1 class="hero__heading">Exceptional dental care for all ages.</h1>
                         <p class="hero__desc">
-                            Exceptional dental care for all ages. Your great
-                            smile begins with a great dentist.
+                            Exceptional dental care for all ages. Your great smile begins with a great
+                            dentist.
                         </p>
                         <div class="hero__row">
                             <a href="#!" class="btn">Book Online</a>
-                            <span class="hero__phone"
-                                >or call (123) 456-7890</span
-                            >
+                            <span class="hero__phone">or call (123) 456-7890</span>
                         </div>
                     </section>
 
@@ -188,17 +119,12 @@
                 <div class="container">
                     <h2 class="heading lv2">Our services</h2>
                     <p class="desc">
-                        Exceptional dental care for all ages. Your great smile
-                        begins with a great dentist.
+                        Exceptional dental care for all ages. Your great smile begins with a great dentist.
                     </p>
 
                     <div class="services__row">
                         <figure class="services__image">
-                            <img
-                                src="./assets/img/services.jpg"
-                                alt="Our services"
-                                class="services__img"
-                            />
+                            <img src="./assets/img/services.jpg" alt="Our services" class="services__img" />
                         </figure>
 
                         <div class="services__list">
@@ -219,12 +145,9 @@
                                 </div>
 
                                 <div class="services__body">
-                                    <h3 class="services__title">
-                                        Oral Surgery
-                                    </h3>
+                                    <h3 class="services__title">Oral Surgery</h3>
                                     <p class="services__intro">
-                                        Everything you expect and then some.
-                                        Cleanings, fillings, and x-rays.
+                                        Everything you expect and then some. Cleanings, fillings, and x-rays.
                                     </p>
                                 </div>
                             </section>
@@ -246,12 +169,9 @@
                                 </div>
 
                                 <div class="services__body">
-                                    <h3 class="services__title">
-                                        Wisdom Teeth Removal
-                                    </h3>
+                                    <h3 class="services__title">Wisdom Teeth Removal</h3>
                                     <p class="services__intro">
-                                        Everything you expect and then some.
-                                        Cleanings, fillings, and x-rays.
+                                        Everything you expect and then some. Cleanings, fillings, and x-rays.
                                     </p>
                                 </div>
                             </section>
@@ -273,12 +193,9 @@
                                 </div>
 
                                 <div class="services__body">
-                                    <h3 class="services__title">
-                                        Preventative Dentistry
-                                    </h3>
+                                    <h3 class="services__title">Preventative Dentistry</h3>
                                     <p class="services__intro">
-                                        Everything you expect and then some.
-                                        Cleanings, fillings, and x-rays.
+                                        Everything you expect and then some. Cleanings, fillings, and x-rays.
                                     </p>
                                 </div>
                             </section>
@@ -294,55 +211,61 @@
                 <div class="container">
                     <h2 class="heading lv2">How it works</h2>
                     <p class="desc">
-                        Exceptional dental care for all ages. Your great smile
-                        begins with a great dentist.
+                        Exceptional dental care for all ages. Your great smile begins with a great dentist.
                     </p>
                     <div class="work__list">
                         <!-- Item 1 -->
                         <section class="work__item">
-                            <img
-                                src="./assets/icons/search.svg"
-                                alt="Search"
-                                class="work__icon"
-                            />
+                            <img src="./assets/icons/search.svg" alt="Search" class="work__icon" />
                             <h3 class="work-item__heading">Search doctor</h3>
                             <p class="work-item__desc">
-                                Search a doctor by education, qualifications or
-                                experience-contact for inquiry.
+                                Search a doctor by education, qualifications or experience-contact for
+                                inquiry.
                             </p>
                             <a href="#!" class="work-item__link">Learn More</a>
                         </section>
 
                         <!-- Item 2 -->
                         <section class="work__item">
-                            <img
-                                src="./assets/icons/search-user.svg"
-                                alt="Search User"
-                                class="work__icon"
-                            />
+                            <img src="./assets/icons/search-user.svg" alt="Search User" class="work__icon" />
                             <h3 class="work-item__heading">Find best doctor</h3>
                             <p class="work-item__desc">
-                                Search a doctor by education, qualifications or
-                                experience-contact for inquiry.
+                                Search a doctor by education, qualifications or experience-contact for
+                                inquiry.
                             </p>
                             <a href="#!" class="work-item__link">Learn More</a>
                         </section>
 
                         <!-- Item 1 -->
                         <section class="work__item">
-                            <img
-                                src="./assets/icons/bag.svg"
-                                alt="bag"
-                                class="work__icon"
-                            />
+                            <img src="./assets/icons/bag.svg" alt="bag" class="work__icon" />
                             <h3 class="work-item__heading">Get treatment</h3>
                             <p class="work-item__desc">
-                                Search a doctor by education, qualifications or
-                                experience-contact for inquiry.
+                                Search a doctor by education, qualifications or experience-contact for
+                                inquiry.
                             </p>
                             <a href="#!" class="work-item__link">Learn More</a>
                         </section>
                     </div>
+                </div>
+            </div>
+
+            <!-- Features -->
+            <div class="features">
+                <div class="container">
+                    <figure class="features__media">
+                        <img src="./assets/img/feature-01.jpg" alt="" class="features__img" />
+                        <img src="./assets/img/feature-02.jpg" alt="" class="features__img" />
+                    </figure>
+
+                    <section class="features__content">
+                        <h2 class="heading lv2 features__heading">Take back your smile with shine.</h2>
+                        <p class="desc">
+                            If you’re missing multiple teeth due to decay, injury, or the natural aging
+                            process, dentures might be the perfect solution.
+                        </p>
+                        <a href="#!" class="btn features__btn">Learn More</a>
+                    </section>
                 </div>
             </div>
         </main>
