--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
-    <body style="height: 5000px">
+    <body style="height: 6000px">
         <!-- Header -->
         <header class="header">
             <div class="container">
@@ -115,9 +115,9 @@
         <!-- Main -->
         <main>
             <!-- Services -->
-            <div class="services">
+            <section class="services">
                 <div class="container">
-                    <h2 class="heading lv2">Our services</h2>
+                    <h2 class="section-heading">Our services</h2>
                     <p class="desc">
                         Exceptional dental care for all ages. Your great smile begins with a great dentist.
                     </p>
@@ -204,12 +204,12 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
 
             <!-- Work -->
-            <div class="work">
+            <section class="work">
                 <div class="container">
-                    <h2 class="heading lv2">How it works</h2>
+                    <h2 class="section-heading">How it works</h2>
                     <p class="desc">
                         Exceptional dental care for all ages. Your great smile begins with a great dentist.
                     </p>
@@ -248,10 +248,10 @@
                         </section>
                     </div>
                 </div>
-            </div>
+            </section>
 
             <!-- Features -->
-            <div class="features">
+            <section class="features">
                 <div class="container">
                     <figure class="features__media">
                         <img src="./assets/img/feature-01.jpg" alt="" class="features__img" />
@@ -259,7 +259,7 @@
                     </figure>
 
                     <section class="features__content">
-                        <h2 class="heading lv2 features__heading">Take back your smile with shine.</h2>
+                        <h2 class="section-heading features__heading">Take back your smile with shine.</h2>
                         <p class="desc">
                             If you’re missing multiple teeth due to decay, injury, or the natural aging
                             process, dentures might be the perfect solution.
@@ -267,7 +267,239 @@
                         <a href="#!" class="btn features__btn">Learn More</a>
                     </section>
                 </div>
-            </div>
+            </section>
+
+            <!-- Team member -->
+            <section class="member">
+                <div class="container">
+                    <div class="member__header">
+                        <h2 class="section-heading">Our virtual dentist</h2>
+                        <a href="#!" class="btn">Meet our dentist</a>
+                    </div>
+
+                    <div class="member__list">
+                        <!-- Member 1 -->
+                        <article class="member-item">
+                            <div class="member-item__bg">
+                                <img
+                                    src="./assets/img/member-01.png"
+                                    alt="Dr. Essence Page"
+                                    class="member-item__avt"
+                                />
+                            </div>
+                            <div class="member-item__content">
+                                <span class="member-item__name">Dr. Essence Page</span>
+                                <p class="member-item__desc">DDS, California - Linda University</p>
+                            </div>
+                        </article>
+
+                        <!-- Member 2 -->
+                        <article class="member-item">
+                            <div class="member-item__bg">
+                                <img
+                                    src="./assets/img/member-02.png"
+                                    alt="Dr. Essence Page"
+                                    class="member-item__avt"
+                                />
+                            </div>
+                            <div class="member-item__content">
+                                <span class="member-item__name">Dr. Essence Page</span>
+                                <p class="member-item__desc">DDS, California - Linda University</p>
+                            </div>
+                        </article>
+
+                        <!-- Member 3 -->
+                        <article class="member-item">
+                            <div class="member-item__bg">
+                                <img
+                                    src="./assets/img/member-03.png"
+                                    alt="Dr. Essence Page"
+                                    class="member-item__avt"
+                                />
+                            </div>
+                            <div class="member-item__content">
+                                <span class="member-item__name">Dr. Essence Page</span>
+                                <p class="member-item__desc">DDS, California - Linda University</p>
+                            </div>
+                        </article>
+
+                        <!-- Member 4 -->
+                        <article class="member-item">
+                            <div class="member-item__bg">
+                                <img
+                                    src="./assets/img/member-04.png"
+                                    alt="Dr. Essence Page"
+                                    class="member-item__avt"
+                                />
+                            </div>
+                            <div class="member-item__content">
+                                <span class="member-item__name">Dr. Essence Page</span>
+                                <p class="member-item__desc">DDS, California - Linda University</p>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div class="section-cta member__cta">
+                        <!-- Previous -->
+                        <button class="section__btn">
+                            <svg
+                                width="6"
+                                height="12"
+                                viewBox="0 0 6 12"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M5.5 1L0.5 6L5.5 11"
+                                    stroke="currentColor"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </button>
+                        <!-- Next -->
+                        <button class="section__btn">
+                            <svg
+                                class="section__btn-right"
+                                width="6"
+                                height="12"
+                                viewBox="0 0 6 12"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M5.5 1L0.5 6L5.5 11"
+                                    stroke="currentColor"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Install -->
+            <section class="install">
+                <div class="container">
+                    <div class="install__wrapper">
+                        <figure>
+                            <img src="./assets/img/install-phone.png" alt="" class="install__phone" />
+                        </figure>
+
+                        <section class="install__content">
+                            <h2 class="section-heading install__heading">
+                                Take back your smile with dentures
+                            </h2>
+                            <p class="desc install__desc">
+                                If you’re missing multiple teeth due to decay, injury, or the natural aging
+                                process, dentures might be the perfect solution.
+                            </p>
+
+                            <div class="install__row">
+                                <button class="install__btn">
+                                    <img src="./assets/img/install-gg.png" alt="" class="install__gg" />
+                                </button>
+
+                                <button class="install__btn">
+                                    <img src="./assets/img/install-app.png" alt="" class="install__app" />
+                                </button>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+            </section>
+
+            <!-- News -->
+            <section class="news">
+                <div class="container">
+                    <div class="news__inner">
+                        <section class="news__content">
+                            <h2 class="section-heading news__heading">Read Latest News & Events.</h2>
+                            <a href="#!" class="news__more">Read All Blog</a>
+                            <div class="section-cta news__cta">
+                                <!-- Previous -->
+                                <button class="section__btn">
+                                    <svg
+                                        width="6"
+                                        height="12"
+                                        viewBox="0 0 6 12"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M5.5 1L0.5 6L5.5 11"
+                                            stroke="currentColor"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                    </svg>
+                                </button>
+                                <!-- Next -->
+                                <button class="section__btn">
+                                    <svg
+                                        class="section__btn-right"
+                                        width="6"
+                                        height="12"
+                                        viewBox="0 0 6 12"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M5.5 1L0.5 6L5.5 11"
+                                            stroke="currentColor"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                    </svg>
+                                </button>
+                            </div>
+                        </section>
+
+                        <article class="news__list">
+                            <!-- Item 1 -->
+                            <section class="news-item">
+                                <figure>
+                                    <a href="#!"
+                                        ><img class="news-item__thumb" src="./assets/img/news-01.jpg" alt=""
+                                    /></a>
+                                </figure>
+
+                                <section class="news-item__body">
+                                    <h3 class="news-item__heading">
+                                        <a href="#!">Key Considerations for Regulatory Compliant.</a>
+                                    </h3>
+                                    <p class="news-item__desc">
+                                        It’s easy to think about medical care from a narrow perspective. You
+                                        go to the hospital.
+                                    </p>
+                                    <a href="#!" class="news-item__more">Learn More</a>
+                                </section>
+                            </section>
+
+                            <!-- Item 2 -->
+                            <section class="news-item">
+                                <figure>
+                                    <a href="#!"
+                                        ><img class="news-item__thumb" src="./assets/img/news-02.jpg" alt=""
+                                    /></a>
+                                </figure>
+
+                                <section class="news-item__body">
+                                    <h3 class="news-item__heading">
+                                        <a href="#!">What Is Population Health Management?</a>
+                                    </h3>
+                                    <p class="news-item__desc">
+                                        It’s easy to think about medical care from a narrow perspective. You
+                                        go to the hospital.
+                                    </p>
+                                    <a href="#!" class="news-item__more">Learn More</a>
+                                </section>
+                            </section>
+                        </article>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
