--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
-    <body style="height: 6000px">
+    <body style="height: 7000px">
         <!-- Header -->
         <header class="header">
             <div class="container">
@@ -497,6 +497,20 @@
                                 </section>
                             </section>
                         </article>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Appointment -->
+            <section class="appointment">
+                <div class="container">
+                    <div class="appointment__inner">
+                        <h2 class="appointment__heading section-heading">Always welcoming new patients</h2>
+                        <p class="appointment__desc section-desc">
+                            Take control of your dental health and get the personalized care you deserve. Call
+                            (541) 772-8846 to schedule
+                        </p>
+                        <a href="#!" class="btn">Appointment</a>
                     </div>
                 </div>
             </section>
