Update desc line height

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <section class="services">
                 <div class="container">
                     <h2 class="section-heading">Our services</h2>
-                    <p class="desc">
+                    <p class="section-desc">
                         Exceptional dental care for all ages. Your great smile begins with a great dentist.
                     </p>
 
@@ -210,7 +210,7 @@
             <section class="work">
                 <div class="container">
                     <h2 class="section-heading">How it works</h2>
-                    <p class="desc">
+                    <p class="section-desc">
                         Exceptional dental care for all ages. Your great smile begins with a great dentist.
                     </p>
                     <div class="work__list">
@@ -260,7 +260,7 @@
 
                     <section class="features__content">
                         <h2 class="section-heading features__heading">Take back your smile with shine.</h2>
-                        <p class="desc">
+                        <p class="section-desc">
                             If you’re missing multiple teeth due to decay, injury, or the natural aging
                             process, dentures might be the perfect solution.
                         </p>
@@ -391,7 +391,7 @@
                             <h2 class="section-heading install__heading">
                                 Take back your smile with dentures
                             </h2>
-                            <p class="desc install__desc">
+                            <p class="section-desc install__desc">
                                 If you’re missing multiple teeth due to decay, injury, or the natural aging
                                 process, dentures might be the perfect solution.
                             </p>
